<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2017 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/controls">
    <SwitchPreference
        android:key="pref_switch"
        android:title="@string/switch_name"/>
    <CheckBoxPreference
        android:key="pref_checkbox"
        android:title="@string/checkbox"/>
    <Preference
        android:key="pref_radio_button_list"
        android:title="@string/radio_button_list"
        android:icon="@drawable/arrow_circle">
        <intent
            android:targetPackage="com.example.android.wearable.wear.wearaccessibilityapp"
            android:targetClass="com.example.android.wearable.wear.wearaccessibilityapp.RadioListActivity"/>
    </Preference>
</PreferenceScreen>