<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2017 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view_carousel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true">
    <LinearLayout
        android:id="@+id/layout_photo_carousel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="?android:dialogPreferredPadding"
        android:paddingBottom="?android:dialogPreferredPadding"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title_photo_carousel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/photo_carousel"
            android:textAppearance="@style/android:TextAppearance.Material.Title"/>
        <ImageView
            android:id="@+id/cat_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/description_of_cat_image"
            android:src="@drawable/cats"/>
        <ImageView
            android:id="@+id/dog_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/description_of_dog_image"
            android:src="@drawable/dog"/>
        <ImageView
            android:id="@+id/hamster_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/description_of_hamster_image"
            android:src="@drawable/hamster"/>
        <ImageView
            android:id="@+id/bird_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/description_of_bird_image"
            android:src="@drawable/birds"/>
        <TextView
            android:id="@+id/description_photo_carousel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="?android:listPreferredItemPaddingStart"
            android:paddingEnd="?android:listPreferredItemPaddingEnd"
            android:text="@string/graphics_description"
            android:textAppearance="@style/android:TextAppearance.Material.Body1"/>
    </LinearLayout>
</ScrollView>